<resources>
    <string name="app_name">CV Doc App</string>
    <string name="enter_your_information_to_login">Enter your information to login</string>
    <string name="phone_or_email_address">Phone or Email Address</string>
    <string name="password">Password</string>
    <string name="did_you_forget_your_password">Did you forget your password ?</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="type_the_phone_number">Type the phone number</string>
    <string name="we_will_send_you_an_activation_code_in_a_text_message">We will send you an activation code in a text message</string>
    <string name="next">Next</string>
    <string name="confirmation">Confirmation</string>
    <string name="resend_code">Resend code</string>
    <string name="enter_your_personal_information_to_be_able_to_login">Enter your personal information to be able to login</string>
    <string name="optional">Optional</string>
    <string name="full_name">Full name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="jan">jan</string>
    <string name="feb">feb</string>
    <string name="mar">mar</string>
    <string name="apr">apr</string>
    <string name="may">may</string>
    <string name="jun">jun</string>
    <string name="jul">jul</string>
    <string name="aug">aug</string>
    <string name="sep">sep</string>
    <string name="oct">oct</string>
    <string name="nov">nov</string>
    <string name="dec">dec</string>
    <string name="complete_your_personal_information">Complete your personal information</string>
    <string name="complete_the_registration_process">Complete the registration process</string>
    <string name="address">Address</string>
    <string name="completion">Completion</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="done">Done</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_reset">Password Reset</string>
    <string name="reset">Reset</string>
    <string name="no_browser">No Browser</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="fields">Fields</string>
    <string name="my_list">My List</string>
    <string name="demonstration_video">Demonstration Video</string>
    <string name="your_gain">Your Gain</string>
    <string name="egp">Egp</string>
    <string name="logout">Logout</string>
    <string name="wallet">Wallet</string>
    <string name="amount">Amount</string>
    <string name="bank_name">Bank name</string>
    <string name="account_number">Account number</string>
    <string name="iban_number">Iban number</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="_17_march"> 17 march</string>
    <string name="theme">Theme</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="abanoob">Abanoob Samy</string>
    <string name="email">Email</string>
    <string name="_6_october"> 6 october</string>
    <string name="qualification">Qualification</string>
    <string name="job">Job</string>
    <string name="edit">Edit</string>
    <string name="show_qr_code">show_qr_code</string>
    <string name="required">required</string>
    <string name="code_invaild">Code Invaild</string>
    <string name="please_agree_to_the_following_texts">Please agree to the following texts!</string>
    <string name="short_password">Short password</string>
    <string name="password_is_different">Password is different</string>
    <string name="please_choose_photo">Please choose photo!</string>
    <string name="select_an_image">Select an image</string>
    <string name="camera_or_gallery">Camera or gallery</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="wrong_email">Wrong email</string>
    <string name="try_again">Try again</string>
    <string name="please_connect_to_internet_and_try_again">Please connect to internet and try again</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="this_phone_is_registered">This phone is registered</string>
    <string name="choose_country">Choose country</string>
    <string name="choose_language">Choose language</string>
    <string name="choose">Choose</string>
    <string name="please_select_fields">Please select fields!</string>
    <string name="share">Share</string>
    <string name="change">Change</string>
    <string name="new_user">New user</string>
    <string name="client">Client</string>
    <string name="merchant">Merchant</string>
    <string name="log_in_with_an_account">Log in with an account</string>
    <string name="register_with_a_new_account">Register with a new account</string>
    <string name="register_a_new_user_with">Register a new user with</string>
    <string name="phone">Phone</string>
    <string name="enter_the_email">Enter the email</string>
    <string name="enter_the_mobile_number">Enter the mobile number</string>
    <string name="enter_the_phone_number">Enter the phone number</string>
    <string name="enter_the_registered_phone_number">Enter the registered phone number </string>
    <string name="enter_the_code_that_was_sent_to_the_mobile_number_user_in_the_login_process">Enter the code that was sent to the mobile number user in the login process</string>
    <string name="confirm_mobile_number">Confirm mobile number</string>
    <string name="don_t_have_an_account_registration">Don\'t have an account registration</string>
    <string name="don_t_have_an_account_registration_color"><![CDATA[Don\'t have an account ? <u><font color=#1C035A><b>Registration</b></font></u>]]></string>
    <string name="didn_t_receive_the_otp_code_send_it_again">Didn\'t receive the otp code ? send it again</string>
    <string name="didn_t_receive_the_otp_code_send_it_again_color"><![CDATA[Didn\'t receive the otp code ? <u><font color=#1C035A><b>Send it again</b></font></u>]]></string>
    <string name="trade_name">Trade name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="messages">Messages</string>
    <string name="location">Location</string>
    <string name="interests">Interests</string>
    <string name="write_your_major">Write your major</string>
    <string name="select_area">Select Area</string>
    <string name="please_fill_in_the_fields">Please fill in the fields</string>
    <string name="select_interests">Select Interests</string>
    <string name="welcome_to_the_car_parts_application">Welcome to the car parts application</string>
    <string name="please_fill_in_the_following_data_in_order_to_help_us_find_the_parts_that_need_looking_for">Please fill in the following data .. in order to help us find the parts that need looking for</string>
    <string name="kingdom_of_saudi_arabia">Kingdom of Saudi Arabia</string>
    <string name="car_type">Car Type</string>
    <string name="car_model">Car Model</string>
    <string name="widget_type">Widget Type</string>
    <string name="widget_number">Widget Number</string>
    <string name="widget_number_optional">Widget Number ( Optional )</string>
    <string name="car_body">Car Body</string>
    <string name="structure_no">Structure No</string>
    <string name="the_number_of_pieces_required">The number of pieces required</string>
    <string name="send_order">Send Order</string>
    <string name="show">Show</string>
    <string name="your_request_has_been_sent">Your request has been sent</string>
    <string name="you_will_receive_offers_from_merchants_in_your_push_notifications">You will receive offers from merchants in your push notifications</string>
    <string name="go_to_main">Go To Main</string>
    <string name="profile">Profile</string>
    <string name="purchases">Purchases</string>
    <string name="personal_information">Personal Information</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="call_us">Call us</string>
    <string name="general_settings">General Settings</string>
    <string name="this_is_not_a_merchant_account">This is not a merchant account!</string>
    <string name="this_is_not_a_client_account">This is not a client account!</string>
    <string name="there_is_no_data">There is no data!</string>
    <string name="select_car_type">Select Car Type</string>
    <string name="requests_sent_to_you">Requests sent to you</string>
    <string name="order_number">Order Number:</string>
    <string name="car_type_">Car Type:</string>
    <string name="car_model_">Car Model:</string>
    <string name="piece_number">Piece Number:</string>
    <string name="piece_type">Piece Type:</string>
    <string name="location_">Location:</string>
    <string name="reject">Reject</string>
    <string name="send_your_reply">Send Your Reply</string>
    <string name="rejected_successfully">Rejected successfully</string>
    <string name="order_details">Order Details</string>
    <string name="add_your_offer">Add Your Offer</string>
    <string name="price">Price</string>
    <string name="price_">Price:</string>
    <string name="piece_">Piece:</string>
    <string name="new_">New</string>
    <string name="used">Used</string>
    <string name="warranty_">Warranty:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="your_offer_has_been_sent_successfully">Your offer has been sent successfully</string>
    <string name="offers">Offers</string>
    <string name="offers_sent_by_merchants">Offers sent by merchants</string>
    <string name="accept">Accept</string>
    <string name="piece_status_">Piece Status:</string>
    <string name="merchant_name">Merchant Name:</string>
    <string name="sr">SR</string>
    <string name="latest_withdrawals">Latest Withdrawals</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="available_balance">Available Balance</string>
    <string name="sales">Sales</string>
    <string name="purchase">Purchase</string>
    <string name="complete_the_purchase">Complete the purchase</string>
    <string name="payment_gate">Payment Gate</string>
    <string name="pay">Pay</string>
    <string name="good_news">Good News</string>
    <string name="show_all_received_offers">Show All Received Offers</string>
    <string name="the_offer_has_been_successfully_accepted">The offer has been successfully accepted</string>
    <string name="as">" as "</string>
    <string name="there_is_no_merchants_match_your_order_please_try_again_later">There is no merchants match your order, please try again later...</string>
    <string name="offers_accepted_by_you_from_merchants">Offers accepted by you from merchants</string>
    <string name="client_name">Client Name</string>
    <string name="offers_accepted_by_clients">Offers accepted by clients</string>
    <string name="type_something">Type Something...</string>
    <string name="phone_number_is_already_exist">Phone number is already exist!</string>
    <string name="enter_your_account_and_check_your_inbox_or_spam">Enter your account and check your inbox or spam</string>
    <string name="enter_your_registered_account">Enter your registered account</string>
    <string name="enter_your_account">Enter your account</string>
    <string name="student">Student</string>
    <string name="doctor">Doctor</string>
    <string name="company">Company</string>
</resources>